--- a/riscv-compliance/port-neorv32/framework_v2.0/riscv-target/neorv32/device/rv32i_m/I/Makefile.include
+++ b/riscv-compliance/port-neorv32/framework_v2.0/riscv-target/neorv32/device/rv32i_m/I/Makefile.include
@@ -27,13 +27,16 @@ RUN_TARGET=\
 	sed -i '/MEM_INT_IMEM_USE/c\MEM_INT_IMEM_USE  => true, -- MOD. BY RISCV-COMPL. TEST SCRIPT' $(NEORV32_LOCAL_COPY)/sim/neorv32_tb.vhd; \
 	sed -i '/MEM_INT_IMEM_SIZE/c\MEM_INT_IMEM_SIZE  => 2*1024*1024, -- MOD. BY RISCV-COMPL. TEST SCRIPT' $(NEORV32_LOCAL_COPY)/sim/neorv32_tb.vhd; \
 	sed -i '/MEM_INT_IMEM_ROM/c\MEM_INT_IMEM_ROM  => true, -- MOD. BY RISCV-COMPL. TEST SCRIPT' $(NEORV32_LOCAL_COPY)/sim/neorv32_tb.vhd; \
-	make -C $(NEORV32_LOCAL_COPY)/sw/example/blink_led main.elf; \
-	cp -f $< $(NEORV32_LOCAL_COPY)/sw/example/blink_led/main.elf; \
-	make -C $(NEORV32_LOCAL_COPY)/sw/example/blink_led main.bin; \
-	make -C $(NEORV32_LOCAL_COPY)/sw/example/blink_led install; \
+	make -C $(NEORV32_LOCAL_COPY)/sw/example/hello_world main.elf; \
+	cp -f $< $(NEORV32_LOCAL_COPY)/sw/example/hello_world/main.elf; \
+	make -C $(NEORV32_LOCAL_COPY)/sw/example/hello_world main.bin; \
+	make -C $(NEORV32_LOCAL_COPY)/sw/example/hello_world install; \
 	sed -i '/type application_init_image_t/c\type application_init_image_t is array (0 to ((2*1024*1024)/4)-1) of std_ulogic_vector(31 downto 0); -- MOD. BY RISCV-COMPL. TEST SCRIPT' $(NEORV32_LOCAL_COPY)/rtl/core/neorv32_application_image.vhd; \
+	echo "Running simulation...please wait"; \
 	sh $(NEORV32_LOCAL_COPY)/sim/ghdl/ghdl_sim.sh --stop-time=$(SIM_TIME) >> /dev/null; \
-	cp $(work_dir_isa)/neorv32.uart.sim_mode.data.out $(*).signature.output;
+	cp $(work_dir_isa)/neorv32.uart.sim_mode.data.out $(*).signature.output; \
+	echo "Signature generated.";
+
 
 
 RISCV_PREFIX   ?= riscv32-unknown-elf-
